[gd_scene load_steps=16 format=1]

[ext_resource path="res://scripts/player.gd" type="Script" id=1]
[ext_resource path="res://picture/awewe0000.tex" type="Texture" id=2]
[ext_resource path="res://sounds/Alan Walker - Fade.ogg" type="AudioStream" id=3]
[ext_resource path="res://sounds/gun_sound.ogg" type="AudioStream" id=4]
[ext_resource path="res://sounds/empty_gun.ogg" type="AudioStream" id=5]
[ext_resource path="res://sounds/gun_reload.ogg" type="AudioStream" id=6]
[ext_resource path="res://instance/GUI.tscn" type="PackedScene" id=7]
[ext_resource path="res://picture/Untitled-1.tex" type="Texture" id=8]
[ext_resource path="res://picture/blood_splatter_transparency_by_sagacious-d3h1yw6.png" type="Texture" id=9]
[ext_resource path="res://Fonts/thai.fnt" type="BitmapFont" id=10]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 30.0199

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="OccluderPolygon2D" id=3]

closed = true
cull_mode = 0
polygon = Vector2Array( -27.5635, -25.7628, -10.6281, -38.3184, 2.80336, -39.1943, 25.5785, -26.0548, 29.3743, -10.8714, 27.9144, 4.89598, 20.0307, 13.9476, 9.22711, 19.4954, -8.00023, 20.6634, -19.9718, 11.9037, -29.0234, -0.0678329, -31.9433, -14.3753 )

[sub_resource type="Animation" id=4]

resource/name = "shoot"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 0.9, 1 ), "transitions":FloatArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ), "update":0, "values":[ Vector2( 0, 0 ), Vector2( -106.195, -10.0901 ), Vector2( 100.02, 3.67645 ), Vector2( -5.0383, -87.0724 ), Vector2( -3.6832, 90.5161 ), Vector2( -74.1735, -10.8663 ), Vector2( 75.7833, -8.04398 ), Vector2( -9.45511, -92.4215 ), Vector2( 11.9105, 83.5164 ), Vector2( 3.05176e-05, -18.4161 ), Vector2( -86.3387, 2.03258 ), Vector2( 0, 0 ) ] }

[sub_resource type="RectangleShape2D" id=5]

custom_solver_bias = 0.0
extents = Vector2( 27.6722, 38.9393 )

[node name="player" type="KinematicBody2D" groups=[ "player" ]]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, -2.64076, -6.95137 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

transform/pos = Vector2( -0.725275, 0.304368 )
transform/scale = Vector2( 1.13292, 1.06983 )
z/relative = false
texture = ExtResource( 2 )

[node name="Position2D" type="Position2D" parent="Sprite"]

editor/display_folded = true
transform/pos = Vector2( -0.487671, 74.6777 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Position2D"]

shape = SubResource( 2 )
trigger = false
_update_shape_index = -1

[node name="LightOccluder2D" type="LightOccluder2D" parent="Sprite"]

occluder = SubResource( 3 )
light_mask = 1

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.5
one_shot = true
autostart = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

visibility/visible = false
transform/pos = Vector2( -2.64076, -6.95137 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="bgm" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 3 )
stream/play = false
stream/loop = true
stream/volume_db = 0.0
stream/autoplay = true
stream/paused = true
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="gun" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 4 )
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="Camera2D" type="Camera2D" parent="."]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
limit/smoothed = true
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = true
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Camera2D"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/shoot = SubResource( 4 )
playback/active = true
playback/speed = 3.0
blend_times = [  ]
autoplay = ""

[node name="gun_empty" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 5 )
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="reload" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 6 )
stream/play = false
stream/loop = false
stream/volume_db = 5.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="bullet_col" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 5 )
shapes/0/transform = Matrix32( 1, 0, 0, 0.76084, -2.64076, -10.0322 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="bullet_col"]

visibility/visible = false
transform/pos = Vector2( -2.64076, -10.0322 )
transform/scale = Vector2( 1, 0.76084 )
shape = SubResource( 5 )
trigger = false
_update_shape_index = 0

[node name="cl" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="GUI" parent="cl" instance=ExtResource( 7 )]

[node name="game_over" type="TextureFrame" parent="cl"]

visibility/visible = false
anchor/right = 1
anchor/bottom = 1
rect/scale = Vector2( 0.8, 0.85 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = -3.0
margin/right = -1215.0
margin/bottom = -637.0
texture = ExtResource( 8 )
expand = true
stretch_mode = 3

[node name="blood" type="TextureFrame" parent="cl"]

visibility/opacity = 0.0
rect/scale = Vector2( 1.38, 0.94 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 742.0
margin/bottom = 643.0
texture = ExtResource( 9 )
stretch_mode = 3

[node name="blood_time" type="Timer" parent="cl"]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = false

[node name="PlayerName" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -41.0
margin/top = 44.0
margin/right = 36.0
margin/bottom = 58.0
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "PlayerName"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="body_enter" from="bullet_col" to="." method="_on_bullet_col_body_enter"]


